# stock-trade-bot

./: AAPL_features.csv  AMZN_features.csv  GOOGL_features.csv  MSFT_features.csv  NFLX_features.csv  README.md  README_LIVE_TRADING.md  feature_importance_target_3d.csv  feature_importance_target_3d_new.csv  feature_importance_target_5d.csv  feature_importance_target_5d_new.csv  fix_database.py  pyproject.toml  requirements.txt  sentiment_cache.pkl  setup.py  start_trading_bot.py  test_live_trading_bot.py  test_ml_predictor.py  trading_bot.db
app/: __init__.py  broker_integrations.py  live_trader.py  main.py  ml_predictor.py  news_sentiment.py
app/core/: config.py  scheduler.py
app/db/: models.py  session.py
app/indicators/: advanced_indicators.py  insider_trading.py
app/services/: ml_predictor.py  performance.py  trading.py
app/strategies/: base_strategy.py  ema_crossover_strategy.py  ml_strategy.py
data/archive/: efficient_backtest_results.csv  rf_model.pkl  test_dashboard_weekend.py  test_numpy.py
data/features/: IBM_features.csv  META_features.csv  MSFT_features.csv  NVDA_features.csv  ORCL_features.csv  TQQQ_features.csv  TSLA_features.csv
data/models/: model_features.txt  rf_model_target_3d_new.pkl  (+1 more)
scripts/: backtest_with_sentiment.py  close_positions.py  dashboard.py  efficient_backtest_with_sentiment.py  feature_engineering.py  init_db.py  retrain_models.py  test_alpaca.py  test_trade.py  test_trading_session.py  train_classifier.py
tests/: test_finlight.py  test_live_trading.py  test_ml_predictor.py
venv311/: pyvenv.cfg
(+7 files in other folders)
