[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stock-backend"
version = "0.1.0"
authors = [
    { name = "Alex" },
]
description = "AI Stock Trading Bot"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["app"] 